--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
 
   body {
     /* Style - Apply default font, text color and background */
-    @apply font-body text-fg bg-bg;
+    @apply text-fg bg-bg;
+    /* font-body */
   }
 }
