feat(header): improve logo and navigation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,6 @@
 
   body {
     /* Style - Apply default font, text color and background */
-    @apply text-fg bg-bg;
-    /* font-body */
+    @apply text-fg bg-bg font-body;
   }
 }
