--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,11 @@
 @layer base {
   * {
     /* Accessibility - Apply focus ring */
-    @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none transition-colors;
+    @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none transition-colors !duration-300;
   }
 
   body {
     /* Style - Apply default font, text color and background */
-    @apply text-fg bg-bg font-body transition-colors;
+    @apply text-fg bg-bg font-body transition-colors !duration-300;
   }
 }
