--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,6 @@
 
   body {
     /* Style - Apply default font, text color and background */
-    @apply text-fg bg-bg font-body transition-colors !duration-300;
+    @apply text-fg fill-fg bg-bg font-body transition-colors !duration-300;
   }
 }
